--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -94,7 +94,7 @@
 }
 
 .bomb {
-    transition: 0.5s;
+    transition: 0.5;
     background-color: rgb(255, 217, 0);
     border: 1px  rgb(255, 217, 0) solid;
 }
