--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,9 +1,8 @@
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
 .grid {
     margin: 24px;
+    width: fit-content; 
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-left: auto;
+    margin-right: auto;
 }
