--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -102,6 +102,10 @@
 .bomb {
     transition: 0.5;
     background-color: rgb(255, 217, 0);
+    background-image: url(../b.png);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: 50%;
     border: 1px  rgb(255, 217, 0) solid;
 }
 
